2005-07-30  Sven Neumann  <sven@gimp.org>

	* app/base/gimphistogram.c (gimp_histogram_calculate_sub_region):
	loop unrolling.

	* app/dialogs/about-dialog.c 
	* app/widgets/gimpselectiondata.c
	* plug-ins/bmp/bmpread.c (ReadBMP)
	* plug-ins/gfig/gfig.c (gfig_load)
	* plug-ins/imagemap/imap_preview.c 
	* plug-ins/imagemap/imap_selection.c
	* plug-ins/jpeg/jpeg-exif.c
	* plug-ins/common/dicom.c: fixed signedness warnings.

2005-07-30  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/Makefile.am
	* plug-ins/script-fu/scripts/image-structure.scm: removed this
	script (see bug #307016).

2005-07-30  Sven Neumann  <sven@gimp.org>

	* app/base/tile-swap.c: increase the size of the swap file in
	chunks of 16MB instead of only 256KB. Check the return value of
	ftruncate().

2005-07-29  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppageselector.c: increased spacing.

2005-07-29  Sven Neumann  <sven@gimp.org>

	* menus/image-menu.xml.in: added "tools-foreground-select" to the
	Selection Tools menu.

	* app/tools/gimpforegroundselecttool.c: resolved clashing mnemonic.

2005-07-29  Sven Neumann  <sven@gimp.org>

	* themes/Default/images/Makefile.am
	* themes/Default/images/tools/stock-tool-foreground-select-16.png
	* themes/Default/images/tools/stock-tool-foreground-select-22.png:
	added placeholder for yet-to-be-drawn tool icon.

	* libgimpwidgets/gimpstock.[ch]: register it.

	* app/tools/gimpforegroundselecttool.c: use it.

	* app/widgets/gimpclipboard.[ch] (gimp_clipboard_get_svg): return
	a signed char pointer.

	* app/actions/edit-commands.c 
	* app/tools/gimpinkoptions-gui.c: fixed signedness issues.

2005-07-29  Sven Neumann  <sven@gimp.org>

	* app/base/siox.[ch]
	* app/core/gimpdrawable-foreground-extract.c: pass progress_callback
	and progress_data to siox_foreground_extract().

2005-07-29  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c (add_to_list): keep a tail pointer. Speeds up
	the benchmark by about 50%.
